--- a/config/nav2_params-0.yaml
+++ b/config/nav2_params-0.yaml
@@ -192,7 +192,7 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.05
-      footprint: "[ [0.1, -0.35], [0.35, -0.35], [0.35, 0.35], [-0.35, 0.35] , [-0.35, -0.35], [-0.1, -0.35], [-0.1, -1.0], [0.1, -1.0]]" # 0 degree
+      footprint: "[[0.35, 0.1], [0.35, 0.35], [-0.35, 0.35], [-0.35, -0.35], [0.35, -0.35], [0.35, -0.1], [1.0, -0.1], [1.0, 0.1]]" # 0 degree tail
       published_footprint: True
       #robot_radius: 0.22
       plugins: ["voxel_layer", "inflation_layer"]
@@ -235,7 +235,7 @@ global_costmap:
       use_sim_time: True
       #robot_radius: 0.22
       resolution: 0.05
-      footprint: "[ [0.1, -0.35], [0.35, -0.35], [0.35, 0.35], [-0.35, 0.35] , [-0.35, -0.35], [-0.1, -0.35], [-0.1, -1.0], [0.1, -1.0]]" # 0 degree
+      footprint: "[[0.35, 0.1], [0.35, 0.35], [-0.35, 0.35], [-0.35, -0.35], [0.35, -0.35], [0.35, -0.1], [1.0, -0.1], [1.0, 0.1]]" # 0 degree tail
       published_footprint: True
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
